--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -144,7 +144,7 @@ display: block;
 
 
 
-
+<center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; margin-top:120px;">trade</center>
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; margin-top:125px;">your NFT</center>
 
 <input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:185; right:815;">NFT contract address 1</label>	
@@ -152,6 +152,7 @@ display: block;
 
 <center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:100px;">&#8645;</center>
 
+<center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">for</center>
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">their NFT</center>
 <input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:420; right:815">NFT contract address 2</label>
 <input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:450; right:815">NFT contract token ID 2</label>
