--- a/create_nft_swap_polygon.html
+++ b/create_nft_swap_polygon.html
@@ -1023,7 +1023,7 @@ var display = (async function(){
 	var newBtn = document.createElement('input');
 	newBtn.setAttribute('type', 'button');
 	newBtn.value = "accept trade";
-	newBtn.setAttribute('onclick', 'to_approve(' + "'" + address + "', " + "'" + tokenID2 + "'" + ')');
+	newBtn.setAttribute('onclick', 'to_approve(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + ')');
 	console.log('make_trade(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + ')')
 	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
 	
@@ -1345,7 +1345,7 @@ var acct = (async function(){
 
 
 
-function to_approve(add, k_id){
+function to_approve(k, add, k_id){
 var acct = (async function(){
   	
   //var result = await getAccounts()
@@ -1360,7 +1360,7 @@ var acct = (async function(){
 	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 	
 	//var nft_k = localStorage.getItem("NFT Contract");
-	//var nft_k = k
+	var nft_k = k
 	//var nft_id = localStorage.getItem("NFT Token ID");
 	var add1 = add
 	var nft_id = k_id
