--- a/create_nft_swap_polygon.html
+++ b/create_nft_swap_polygon.html
@@ -1119,7 +1119,7 @@ var acct = (async function(){
 	//console.log(loan_term);
  	//const contract = web3.utils.toChecksumAddress(nft_k);
 	
-        var _data = new web3.eth.Contract(abi, contract_address).methods.accept_trade(nft, address, nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.accept_trade(address).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
