--- a/create_nft_swap_polygon.html
+++ b/create_nft_swap_polygon.html
@@ -1387,7 +1387,7 @@ var acct = (async function(){
   //console.log('Woo done!', result[0])
   //balance = result
   //alert(balance)
-	make_trade(nft_k, add1 nft_id)
+	make_trade(nft_k, add1, nft_id)
 })()
 
 }
