--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -145,7 +145,7 @@ display: block;
 
 
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; margin-top:120px;">trade</center>
-<center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; margin-top:125px;">your NFT</center>
+<center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">your NFT</center>
 
 <input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:185; right:815;">NFT contract address 1</label>	
 <input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:220; right:815;">NFT contract token ID 1</label>		
