--- a/create_nft_swap_polygon.html
+++ b/create_nft_swap_polygon.html
@@ -1362,6 +1362,7 @@ var acct = (async function(){
  	const contract_address1 = web3.utils.toChecksumAddress(nft_k)
         var contract = new web3.eth.Contract(abi, contract_address1);
         const own_ed = await contract.methods.ownerOf(nft_id).call();
+		console.log(own_ed);
 		return own_ed
 		
 })()
