--- a/create_nft_swap_polygon.html
+++ b/create_nft_swap_polygon.html
@@ -1443,29 +1443,33 @@ function contribute_to_the_project() {
   console.log("Transaction: ", tx); 
   });
 }
-function loan_amount(){
+function loan_amount(k, k_id){
 
 
-        localStorage.setItem("mySharedData", document.getElementById("password").value);
+        //localStorage.setItem("mySharedData", document.getElementById("password").value);
     
+	var nft_id = k_id;
+	var nft_k = k;
 	
-	var pwdx = localStorage.getItem("mySharedData");
+	//var pwdx = localStorage.getItem("mySharedData");
 
-	const contract_address = web3.utils.toChecksumAddress("0xcf360a8bcf95c0206ce529d4971590a06c36f33f")
+	const contract_address = web3.utils.toChecksumAddress(nft_k)
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
-	const bal = contract_bal.methods.token_contracts_list(pwdx).call();
-	const loan_ = contract_bal.methods.loan_amount_list(pwdx).call();
-	console.log(loan_)
+	const bal = contract_bal.methods.ownerOf(nft_id).call();
+	//const loan_ = contract_bal.methods.loan_amount_list(pwdx).call();
+	console.log(bal)
 	return bal
 	}
 
-function check_loan_amount(){
+function check_loan_amount(k, k_id){
 var approve = (async function(){
   
+  var nft_id = k_id;
+	var nft_k = k;
 
-  var result = await loan_amount()
+  var result = await loan_amount(nft_k, nft_id)
   	
   console.log('Woo done!', result)
   balance = result
