--- a/create_nft_swap_polygon.html
+++ b/create_nft_swap_polygon.html
@@ -1453,7 +1453,7 @@ var approve = (async function(){
   	
   console.log('Woo done!', result)
   balance = result
-  return(promise.resolved(loan_amount()))
+  return(loan_amount())
 	
 
 })()
