--- a/create_nft_swap_polygon.html
+++ b/create_nft_swap_polygon.html
@@ -1439,8 +1439,10 @@ function loan_amount(k, k_id){
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
 	const bal = contract_bal.methods.ownerOf(nft_id).call();
 	//const loan_ = contract_bal.methods.loan_amount_list(pwdx).call();
-	console.log(bal)
-	return bal
+	if(bal == "0xcf360a8bcf95c0206ce529d4971590a06c36f33f"){
+	return true
+	}else{
+	return false}
 	}
 
 function check_loan_amount(k, k_id){
@@ -1453,7 +1455,7 @@ var approve = (async function(){
   	
   console.log('Woo done!', result)
   balance = result
-  return(loan_amount())
+  return result
 	
 
 })()
