--- a/create_nft_swap_polygon.html
+++ b/create_nft_swap_polygon.html
@@ -1424,7 +1424,7 @@ function contribute_to_the_project() {
   });
 }
 function loan_amount(k, k_id){
-
+var approve = (async function(){
 
         //localStorage.setItem("mySharedData", document.getElementById("password").value);
     
@@ -1439,14 +1439,16 @@ function loan_amount(k, k_id){
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
 	const bal = contract_bal.methods.ownerOf(nft_id).call();
 	//const loan_ = contract_bal.methods.loan_amount_list(pwdx).call();
+	console.log(bal);
 	if(bal == "0xcf360a8bcf95c0206ce529d4971590a06c36f33f"){
 	return true
 	}else{
 	return false}
+	})()
 	}
 
 function check_loan_amount(k, k_id){
-var approve = (async function(){
+//var approve = (async function(){
   
   var nft_id = k_id;
 	var nft_k = k;
@@ -1458,8 +1460,8 @@ var approve = (async function(){
   return result
 	
 
-})()
-return result
+//})()
+
 }
 
 function getvalue(n, q){
