--- a/create_nft_swap_polygon.html
+++ b/create_nft_swap_polygon.html
@@ -865,6 +865,9 @@ var display = (async function(){
 	//var toAdd = document.createDocumentFragment();
 	for (var i = addressCount-1; i>=0; i--){
 	const address = await contract_bal.methods.address_list(i).call();
+	
+	
+	
 	const latest = await contract_bal.methods.debt_obligation_list(address).call();
 	const contract_ID1 = await contract_bal.methods.token_contracts_list1(address).call();
 	const tokenID = await contract_bal.methods.tokens_list1(address).call();
@@ -875,7 +878,7 @@ var display = (async function(){
 	const owned = await k_bal.methods.ownerOf(tokenID).call();
 	console.log("owned: " + owned + " " + "0xCF360a8BcF95c0206Ce529d4971590A06c36f33F")
 	
-		if(latest == false && owned == "0xCF360a8BcF95c0206Ce529d4971590A06c36f33F"){
+		if(latest == false && owned == "0xCF360a8BcF95c0206Ce529d4971590A06c36f33F" && account_address.indexOf(address) == -1){
 	
 	console.log(address);
 	var chat = document.getElementById("contract_address_ID"); // finds the container
@@ -1040,6 +1043,7 @@ var display = (async function(){
 	
 	
 	chat.appendChild(newBtn);
+	account_address.push(address);
 	}
 	}
 	
